--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/general.css" />
     <link rel="stylesheet" href="/css/queries.css" />
     <title>Cachitos</title>
+    <link rel="icon" type="image/png" href="images/favicon.png" />
+
     <script src="main.js" defer></script>
   </head>
   <body>
